--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@types/node": "^14.0.14",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6"
+  },
+  "dependencies": {
+    "@prisma/client": "^2.1.3"
   }
 }
