--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "generate": "prisma generate && ts-node --transpile-only server/src/schema",
+    "dev-server": "ts-node server/src/index.ts"
   },
   "author": "Nikolaev Viktor <maclauddd@gmail.com>",
   "license": "license",
@@ -15,6 +17,10 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
-    "@prisma/client": "^2.1.3"
+    "@nexus/schema": "^0.14.0",
+    "@prisma/client": "^2.1.3",
+    "graphql-yoga": "^1.18.3",
+    "nexus-plugin-prisma": "^0.16.1",
+    "nexus-prisma": "^0.16.2"
   }
 }
