--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@nexus/schema": "^0.14.0",
     "@prisma/client": "^2.1.3",
+    "bcrypt": "^5.0.0",
     "graphql-yoga": "^1.18.3",
     "nexus-plugin-prisma": "^0.16.1",
     "nexus-prisma": "^0.16.2"
