--- a/package.json
+++ b/package.json
@@ -6,22 +6,29 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate": "prisma generate && ts-node --transpile-only server/src/schema",
-    "dev-server": "ts-node server/src/index.ts"
+    "dev-server": "ts-node server/src/index.ts",
+    "dev-client": "next",
+    "build-client": "next build",
+    "start": "next start"
   },
   "author": "Nikolaev Viktor <maclauddd@gmail.com>",
   "license": "license",
   "devDependencies": {
     "@prisma/cli": "^2.1.3",
     "@types/node": "^14.0.14",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6"
   },
   "dependencies": {
     "@nexus/schema": "^0.14.0",
     "@prisma/client": "^2.1.3",
-    "bcrypt": "^5.0.0",
     "graphql-yoga": "^1.18.3",
+    "next": "^9.4.4",
     "nexus-plugin-prisma": "^0.16.1",
-    "nexus-prisma": "^0.16.2"
+    "nexus-prisma": "^0.16.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
