--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
+    "@apollo/client": "^3.0.0-rc.12",
+    "@apollo/react-ssr": "^3.1.5",
     "@nexus/schema": "^0.14.0",
     "@prisma/client": "^2.1.3",
+    "apollo-client": "^2.6.10",
     "graphql-yoga": "^1.18.3",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.4.4",
     "nexus-plugin-prisma": "^0.16.1",
     "nexus-prisma": "^0.16.2",
